# rust_twitter

./: .gitignore  Cargo.toml
prisma/: schema.prisma
src/: db.rs  main.rs
