[package]
name = "rust_twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.20.1", features = ["full"] }
twitter-v2 = "0.1.6"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
serde = { version = "1.0.140", features = ["derive"] }
